B&L QA/objects/Sales_Asset__c.object
<CustomObject>
    <description>To store profile questions related to Sales Asset like Fit Sets, Digital Displays</description>
    <fields>
        <fullName>Date_Shipped__c</fullName>
        <label>Date Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Entry__c</fullName>
        <label>Date of Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doorway_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will be SFDC Doorway Account Id</description>
        <label>Doorway</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Assets</relationshipLabel>
        <relationshipName>Sales_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System_Name__c</fullName>
        <label>Legacy System Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator_ID_of_Entry__c</fullName>
        <label>Operator ID of Entry</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleSoft_Order_Number__c</fullName>
        <label>PeopleSoft Order Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Removal_Date__c</fullName>
        <label>Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Removal_Reason__c</fullName>
        <label>Removal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Destroyed</fullName>
                </value>
                <value>
                    <fullName>Moved to Account</fullName>
                </value>
                <value>
                    <fullName>Moved to Storage</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Asset_Sub_Type__c</fullName>
        <label>Sales Asset Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sales_Asset_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
                <value>
                    <fullName>PVSVS</fullName>
                </value>
                <value>
                    <fullName>PVT</fullName>
                </value>
                <value>
                    <fullName>PVMF</fullName>
                </value>
                <value>
                    <fullName>SLT</fullName>
                </value>
                <value>
                    <fullName>SLMF</fullName>
                </value>
                <value>
                    <fullName>SLDD</fullName>
                </value>
                <value>
                    <fullName>SL38</fullName>
                </value>
                <value>
                    <fullName>SDDA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Asset_Type__c</fullName>
        <label>Sales Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Digital Display</fullName>
                </value>
                <value>
                    <fullName>Fit Set</fullName>
                </value>
                <value>
                    <fullName>Care Kits</fullName>
                </value>
                <value>
                    <fullName>Easy Fit Kit</fullName>
                </value>
                <value>
                    <fullName>Fitting Asst. Installed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_ID__c</fullName>
        <label>Serial ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Sales Asset</label>
    <nameField>
        <displayFormat>SA{0000000000}</displayFormat>
        <label>Sales Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Assets</pluralLabel>
    <recordTypes>
        <fullName>CANVC</fullName>
        <active>true</active>
        <description>Record Type for CANVC</description>
        <label>CANVC</label>
    </recordTypes>
    <recordTypes>
        <fullName>USASL</fullName>
        <active>true</active>
        <description>Record Type for USASL Group</description>
        <label>USASL</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>